src/pages/forums/forums.scss
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');

.forums-main {
  display: flex;
  width: calc(100% - 230px);
  margin-left: 230px;

  .forums-container {
    flex: 6;

    .forums-header {
      display: flex;
      margin: 20px;

      .forums-title {
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: space-between;
        margin: 20px 45px 20px 55px;

        .main-title {
          font-size: 26px;
          font-weight: 600;
        }

        .addPost-btn {
          background-color: #893dff;
          text-transform: capitalize;
          box-shadow: rgb(137 61 255 / 34%) 0px 8px 16px 0px;
        }
      }
    }

    .grid-main {
      width: 90%;
      display: flex;
      flex-shrink: 0;
      align-items: center;
      justify-content: center;
      margin: 20px auto;
      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.7);
      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.7);
      border-radius: 10px;

      .grid-items {
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: justify;
        padding: 20px;

        .tag-items {
          display: flex;

          .report-type {
            width: fit-content;
            padding: 5px 15px;
            border-radius: 8px;
            color: white;
            font-size: 9px;
            margin-left: 5px;

            &.inc {
              color: rgb(255, 140, 0);
              background-color: rgba(255, 165, 0, 0.151);
            }

            &.failed {
              color: crimson;
              background-color: rgba(255, 0, 0, 0.2);
            }

            &.rb {
              color: #aa7af0;
              background-color: rgba(170, 122, 240, 0.151);
            }

            &.acs {
              color: blue;
              background-color: rgba(95, 158, 160, 0.151);
            }

            &.curr {
              color: rgb(255, 0, 255);
              background-color: rgba(255, 0, 255, 0.151);
            }

            &.prev {
              color: lightcoral;
              background-color: rgba(240, 128, 128, 0.151);
            }

            &.others {
              color: rgb(150, 75, 0);
              background-color: rgba(150, 75, 0, 0.151);
            }

            &.pending {
              color: goldenrod;
              background-color: rgba(189, 189, 3, 0.151);
            }

            &.completed {
              color: green;
              background-color: rgba(0, 128, 0, 0.151);
            }
          }
        }

        .title {
          font-size: 20px;
          font-weight: 600;
          padding: 10px 0px 5px 20px;
          color: #893dff;
          cursor: pointer;
        }

        .sub-title {
          font-size: 12px;
          font-weight: 400;
          padding-bottom: 5px;
          padding-left: 20px;
          color: #aa7af0;
        }

        .report-detail {
          font-family: 'Inter', sans-serif;
          font-size: 15px;
          font-weight: 400;
          line-height: 1.7;
          color: #999;
          padding-left: 20px;
        }
      }

      .grid-function {
        width: 300px;
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 40px;
        padding: 0px 10px;
        margin: auto 40px;

        .helpful,
        .comments {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;

          p {
            font-weight: 600;
            font-size: 18px;
          }

          small {
            text-transform: lowercase;
            color: #999;
          }
        }
      }
    }
  }
}

